Fix counter on safari

--- a/src/components/category-box/category-box-styles.module.scss
+++ b/src/components/category-box/category-box-styles.module.scss
@@ -52,6 +52,7 @@
 }
 
 .categoryContainer {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
